<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="hu.com.pillenzaehler15.MainActivity">

    <item
        android:id="@+id/actions"
        android:title="@string/actions"
        app:showAsAction="ifRoom|withText">

        <menu>

            <item
                android:id="@+id/insert"
                android:title="@string/insert"
                app:showAsAction="ifRoom|withText" />

            <item
                android:id="@+id/kontrolle"
                android:title="@string/kontrolle"
                app:showAsAction="ifRoom|withText" />

            <item
                android:id="@+id/kaufliste"
                android:title="@string/einkaufsliste"
                app:showAsAction="ifRoom|withText" />

            <item
                android:id="@+id/kosten"
                android:title="@string/kosten_rechnen"
                app:showAsAction="ifRoom|withText" />

        </menu>

    </item>

    <item
        android:id="@+id/help"
        android:title="@string/help"
        app:showAsAction="ifRoom|withText">
    </item>


</menu>